# cnn

./: CMakeLists.txt  Parallel Computing in Deep Reference Network.md  README.md  mnist.jfif  network.drawio  papersummary.md  result.txt
src/examples/mnist/: CMakeLists.txt  convolve.cpp  convolve1.cpp  convolve_base.cpp  mnist_deeplearning.cpp  rdtsc.h
src/tests/: CMakeLists.txt  parallel_for.cpp  tbb_reduce.cpp
src/yannpp/common/: array3d.h  array3d_math.h  log.cpp  log.h
src/yannpp/layers/: convolutionlayer.h  crossentropyoutputlayer.h  fullyconnectedlayer.h  layer_base.h  poolinglayer.h
src/yannpp/network/: network2.h
